--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     - name: checkout
       uses: actions/checkout@master # 将代码拷贝到虚机中
       with:
-        path: bank-front
+        path: src/bank-front
 
     - name: Build And Deploy
       uses: JamesIves/github-pages-deploy-action@master 
