--- a/src/bank-server/src/main/resources/application.properties
+++ b/src/bank-server/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://rm-bp13x83o855j4b8mdjo.mysql.rds.aliyuncs.com
 spring.datasource.username=project2020
 spring.datasource.password=project2020
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+server.port=8000
