--- a/src/bank-frontend/package.json
+++ b/src/bank-frontend/package.json
@@ -13,6 +13,7 @@
     "echarts": "^4.8.0",
     "element-ui": "^2.4.5",
     "vue": "^2.6.11",
+    "vue-cookies": "^1.7.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.5.1"
   },
